--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <title>My BCIT Project</title>
-    <meta name="comp1800 template" content="My 1800 App">
-
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap Library CSS CDN go here -->
-    <!-- Boostrap Library JS CDN  go here -->
-
-    <!-- Other libraries go here -->
-
-    <!-- Link to styles of your own -->
-    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TransitAura</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 
-    <!------------------------------>
-    <!-- Your HTML Layout go here -->
-    <!------------------------------>
-    <!-- Stuff for body goes here -->
+    <header>
+        <img src="logo.png">
+        <h1>TransitAura</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="main.html">Dashboard</a></li>
+            <li><a href="routechecker.html">Routes</a></li>
+            <li><a href="stationchecker.html">Stations</a></li>
+            <li><a href="login.html">Login</a></li>
+        </ul>
+    </nav>
+    <section>
+        <h2>What is TransitAura?</h2>
+        <p>We are a website dedicated to making Metro Vancouver safer by providing real-time transit safety information to users. Users can report and view perceived safety levels and incident reports on any bus, train, or station.</p>
+    </section>
 
-
-    <!---------------------------------------------->
-    <!-- Your own JavaScript functions go here    -->
-    <!---------------------------------------------->
-
-    <!-- Link to scripts of your own -->
-    <!-- <script src="./scripts/script.js"></script> -->
-
+    <footer>
+        <div class="footer-left">
+            <a href="help.html">Help</a>
+            <a href="aboutus.html">About Us</a>
+            <a href="reportbug.html">Report a Bug</a>
+        </div>
+        <div class="footer-right">
+            <a href="privacypolicy.html">Privacy Policy</a>
+            <a href="tos.html">Terms of Service</a>
+            <a href="legal.html">Legal</a>
+        </div>
+    </footer>
 </body>
-
 </html>
