--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
 
-    <header>
+    <header> 
         <img src="logo.png">
         <h1>TransitAura</h1>
     </header>
     <nav>
+        <div>
+            <h1>HI</h1>
+        </div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="main.html">Dashboard</a></li>
