--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
         <h1>TransitAura</h1>
     </header>
     <nav>
-        <div>
-            <h1>HI</h1>
-        </div>
+
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="main.html">Dashboard</a></li>
@@ -28,6 +26,10 @@
         <h2>What is TransitAura?</h2>
         <p>We are a website dedicated to making Metro Vancouver safer by providing real-time transit safety information to users. Users can report and view perceived safety levels and incident reports on any bus, train, or station.</p>
     </section>
+
+    <div id = "map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3506.033760470945!2d-123.0030446226395!3d49.22709531030047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548676595c5fb407%3A0x70139844bf95bfa5!2sMetropolis%20at%20Metrotown!5e0!3m2!1sen!2sca!4v1728417072636!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
 
     <footer>
         <div class="footer-left">
