--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TransitAura</title>
     <link rel="stylesheet" href="styles.css">
+
+        <!-- Bootstrap Library CSS CDN go here -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+            <!-- Boostrap Library JS CDN  go here -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+</script>
 </head>
 <body>
 
@@ -31,7 +40,19 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3506.033760470945!2d-123.0030446226395!3d49.22709531030047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548676595c5fb407%3A0x70139844bf95bfa5!2sMetropolis%20at%20Metrotown!5e0!3m2!1sen!2sca!4v1728417072636!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
-    <footer>
+    <div class="fixed-bottom py-3 bg-info">
+        <div class="container text-center">
+        </div>
+    </div>
+    <footer class="navbar bg-info fixed-bottom">
+		<div class="container">
+        <span class="material-icons">hamburger</span>
+				<span class="material-icons">home</span>
+				<span class="material-icons">account</span>
+		 </div>
+    </footer>
+    <!-- COMMENTING THIS OUT FOR NOW TO MOVE NAV BAR TO BOTTOM
+        <footer>
         <div class="footer-left">
             <a href="help.html">Help</a>
             <a href="aboutus.html">About Us</a>
@@ -43,5 +64,7 @@
             <a href="legal.html">Legal</a>
         </div>
     </footer>
+    -->
+
 </body>
 </html>
