worked on index page a little more -himmat

--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,7 +1,7 @@
-<nav class="navbar">
+<nav class="nav_after_login">
     <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
+        <li><img src="./media/Icon-Placeholder.png"></li>
+        <li><img src="./media/Icon-Placeholder.png"></li>
+        <li><img src="./media/Icon-Placeholder.png"></li>
     </ul>
 </nav>
