--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- Bootstrap if we need it -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-    </script>
+    </script> -->
 
     <!-- Firebase -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -31,6 +31,14 @@
 
 <body>
     <nav id="navbarPlaceholder"></nav>
+    <img src="media/placeholder.png" id="homepage-title-img">
+    <h2 id="homepage-h2-1">TransitAura, getting you there safely.</h2>
+
+    <p id="homepage-p1">Welcome to TransitAura, a project aimed at making Vancouver safer for its residents. Using our easy-to-navigate interface, users can view Safety Levels and Incidents on their transit routes and stations. This data is crowd-sourced, and everyone has a part to play in keeping transit safe!</p>
+
+    <h2 id="homepage-h2-2">Riding Transit? TransitAura.</h2>
+    
+    <p id="homepage-p2">Make an account to start reporting and viewing today!</p>
 
     <nav id="footerPlaceholder"></nav>
 
