--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,7 +1,7 @@
-<nav class="navbar">
+<nav class="nav_before_login">
     <ul>
-        <li><img src="./media/Icon-Placeholder.png"></li>
-        <li><img src="./media/Icon-Placeholder.png"></li>
-        <li><img src="./media/Icon-Placeholder.png"></li>
+        <li><a href="./login.html">Enter App</a></li>
+        <li><a href="./aboutus.html">About Us</a></li>
+        <li><a href="./help.html">Help</a></li>
     </ul>
 </nav>
