--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
     <nav id="navbarPlaceholder"></nav>
-    <img src="media/placeholder.png" id="homepage-title-img">
+    <img src="media/placeholder.jpg" id="homepage-title-img">
     <h2 id="homepage-h2-1">TransitAura, getting you there safely.</h2>
 
     <p id="homepage-p1">Welcome to TransitAura, a project aimed at making Vancouver safer for its residents. Using our easy-to-navigate interface, users can view Safety Levels and Incidents on their transit routes and stations. This data is crowd-sourced, and everyone has a part to play in keeping transit safe!</p>
