finished about us for now

--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body id = "aboutUs">
+<body id="aboutUs">
     <div>
         <h1 class="h1InAbout">What is TransitAura?</h1>
     </div>
@@ -31,11 +31,18 @@
         </p>
     </div>
     <div>
-        <h1 class = "h1InAbout">Who are we?</h1>
+        <h1 class="h1InAbout">Who are we?</h1>
         <p>
             We’re a team of first-term Computer Systems Technology students with a passion for making a difference. With
             fresh perspectives and a shared dedication to public safety, we’ve come together to create an app that helps
             transit users stay informed and safe.
+        </p>
+    </div>
+    <div>
+        <h1 class = "h1InAbout">Why did we build this app?</h1>
+        <p>
+            Every transit user deserves peace of mind. We built this app to help communities stay informed about potential safety
+            issues, creating a safer transit environment for everyone.
         </p>
     </div>
 </body>
