more edits - himmat

--- a/login.html
+++ b/login.html
@@ -32,20 +32,8 @@
 <body>
     <nav id="navbarPlaceholder"></nav>
 
-        
-    <!-- <div id="login-container">
-        <input type="email" id="email" placeholder="Email" />
-        <input type="password" id="password" placeholder="Password" />
-        <button onclick="login()">Log In</button>
-        <button onclick="signUp()">Sign Up</button>
-    </div>
-    <div id="logout-container" style="display:none;">
-        <p>Welcome! You are logged in.</p>
-        <button onclick="logout()">Log Out</button>
-    </div> -->
-
     <div class="container">
-        <h1>Let's Login!</h1>
+        <h1>Login</h1>
     </div>
     <div id="firebaseui-auth-container"></div>
     <div id="loader">Loading...</div>
