--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="scripts/firebaseAPI.js"></script>
     <script src="scripts/skeleton.js"></script>
     <script src="scripts/script.js"></script>
+    <script src="scripts/authentication.js"></script>
     <script>
         logout();
     </script>
