--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
     <nav id="navbarPlaceholder"></nav>
 
     <div class="container">
-        <h1>Login</h1>
+        <h1 id="login-h1">Login</h1>
     </div>
     <div id="firebaseui-auth-container"></div>
     <div id="loader">Loading...</div>
