--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,8 +1,49 @@
 <!DOCTYPE html>
-<nav class="nav_after_login">
-    <ul>
-        <li><img src="./media/Icon-Placeholder.png"></li>
-        <li><img src="./media/Icon-Placeholder.png"></li>
-        <li><img src="./media/Icon-Placeholder.png"></li>
-    </ul>
-</nav>
+<head>
+<title>Navbar After Login</title>
+<!-- TO FIX:
+1. NEED TO LINK TO STYLESHEET PROPERLY
+2. center icons, make them smaller
+3. should blue color be using bootstrap or custom css -->
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+</head>
+<body>
+<nav class="nav_after_login navbar navbar-expand-lg navbar-light bg-primary fixed-bottom">
+    <div class="container-fluid">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <img src="./media/Icon-Placeholder.png" />
+            <a class="nav-link text-light" href="#"> Starred </a>
+          </li>
+          <li class="nav-item">
+            <img src="./media/Icon-Placeholder.png" />
+            <a class="nav-link text-light" href="/aboutus.html"> Home </a>
+          </li>
+          <li class="nav-item">
+            <img src="./media/Icon-Placeholder.png" />
+            <a class="nav-link text-light" href="#"> Profile</a>
+          </li>
+        </ul>
+        <div class="d-flex">
+          <a class="btn btn-outline-light" href="/index.html">Logout</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
