--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -15,7 +15,7 @@
       </li>
       <li class="nav-item d-flex flex-column align-items-center">
         <img src="./media/Icon-Placeholder.png" />
-        <a class="nav-link text-light" href="/aboutus.html"> Home </a>
+        <a class="nav-link text-light" href="/main.html"> Home </a>
       </li>
       <li class="nav-item d-flex flex-column align-items-center">
         <img src="./media/Icon-Placeholder.png" />
