--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,8 +1,30 @@
 <!DOCTYPE html>
-<nav class="nav_before_login">
-    <ul>
-        <li><a href="./login.html">Enter App</a></li>
-        <li><a href="./aboutus.html">About Us</a></li>
-        <li><a href="./help.html">Help</a></li>
+<head>
+  <title>Navbar After Login</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/styles/styles.css" rel="stylesheet">
+</head>
+<body>
+
+<nav class="nav_after_login navbar navbar-expand bg-primary fixed-bottom">
+  <div class="container-fluid d-flex justify-content-center">
+    <ul class="navbar-nav">
+      <li class="nav-item d-flex flex-column align-items-center">
+        <img src="./media/Icon-Placeholder.png" />
+        <a class="nav-link text-light" href="/aboutus.html"> About Us </a>
+      </li>
+      <li class="nav-item d-flex flex-column align-items-center">
+        <img src="./media/Icon-Placeholder.png" />
+        <a class="nav-link text-light" href="/index.html"> Home </a>
+      </li>
+      <li class="nav-item d-flex flex-column align-items-center">
+        <img src="./media/Icon-Placeholder.png" />
+        <a class="nav-link text-light" href="/help.html"> Help </a>
+      </li>
     </ul>
-</nav>
+    
+    
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
