--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <title>TransitAura</title>
     <meta name="comp1800 template" content="My 1800 App">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Bootstrap if we need it -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -36,9 +36,11 @@
 
     <div class="container">
         <h1 id="login-h1">Login</h1>
+        <div id="firebase-auth-form-container">
+            <div id="firebaseui-auth-container"></div>
+        </div>
+        <div id="loader">Loading...</div>
     </div>
-    <div id="firebaseui-auth-container"></div>
-    <div id="loader">Loading...</div>
 
 
     <nav id="footerPlaceholder"></nav>
@@ -48,9 +50,7 @@
     <script src="scripts/skeleton.js"></script>
     <script src="scripts/script.js"></script>
     <script src="scripts/authentication.js"></script>
-    <script>
-        logout();
-    </script>
+
 
 </body>
 
