--- a/login.html
+++ b/login.html
@@ -36,9 +36,9 @@
 
     <div class="container">
         <h1 id="login-h1">Login</h1>
-        <div id="firebase-auth-form-container">
+        
             <div id="firebaseui-auth-container"></div>
-        </div>
+        
         <div id="loader">Loading...</div>
     </div>
 
@@ -50,6 +50,7 @@
     <script src="scripts/skeleton.js"></script>
     <script src="scripts/script.js"></script>
     <script src="scripts/authentication.js"></script>
+    <script src="scripts/main.js"></script>
 
 
 </body>
