--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -59,7 +59,7 @@
     <ul class="navbar-nav">
       <li class="nav-item">
         <img id = "bookmark-icon"src="/media/bookmark.png" alt="Bookmarked Icon" />
-        <a class="nav-link text-light" href="#">Bookmarked</a>
+        <a class="nav-link text-light" href="/afterLogin/bookmark.html">Bookmarked</a>
       </li>
       <li class="nav-item">
         <img id = "home-icon" src="/media/home.png" alt="Home Icon" />
