added design to some card headings

--- a/afterLogin/bookmark.html
+++ b/afterLogin/bookmark.html
@@ -38,7 +38,7 @@
    
     <template id="savedStationsTemplate">
         <div class="card">
-            <h5 class="card-title"></h5>
+            <h5 class="card-title card-header"></h5>
             <div class="card-body">
                 <p class="card-text"></p>
                 <p class="card-address"></p>
@@ -49,13 +49,14 @@
         </div>
     </template>
 
+
     <div id="savedStations-go-here"></div>
 
     <h2 id = "saved-routes-h2">Saved Routes</h2>
 
     <template id="savedRoutesTemplate">
         <div class="card">
-            <h5 class="bus-title"></h5>
+            <h5 class="bus-title card-header"></h5>
             <div class="card-body"> 
                 <p class="bus-safetyLevel"></p>
                 <p class="bus-details"></p>
