--- a/searchroutes.html
+++ b/searchroutes.html
@@ -39,6 +39,21 @@
         <div id="dropdownOptionsRoutes" class="dropdown-options"></div>
       </div>
 
+  
+      <template id="savedRoutesTemplate">
+          <div class="card">
+              <h5 class="bus-title card-header"></h5>
+              <div class="card-body"> 
+                  <p class="bus-safetyLevel"></p>
+                  <p class="bus-details"></p>
+                  <p class="bus-busy"></p>
+                  <a href="#" class="btn btn-primary">report Incident</a>
+              </div>
+          </div>
+      </template>
+
+      <div id="savedRoutes-go-here"></div>
+
     <nav id="footerPlaceholder"></nav>
 
 
@@ -47,7 +62,7 @@
     <script src="scripts/firebaseAPI.js"></script>
     <script src="scripts/skeleton.js"></script>
     <script src="scripts/script.js"></script>
-    <script src="scripts/authentication.js"></script>
+    <script src="/scripts/main.js"></script>
 
     <script>
         function filterOptions() {
