--- a/searchstations.html
+++ b/searchstations.html
@@ -39,6 +39,23 @@
         <div id="dropdownOptionsStations" class="dropdown-options"></div>
       </div>
 
+
+      
+   
+      <template id="savedStationsTemplate">
+          <div class="card">
+              <h5 class="card-title card-header"></h5>
+              <div class="card-body">
+                  <p>Location: <span class="card-text"></span></p>
+                  <p>Busyness: <span class="card-busy"></span></p>
+                  <p>Address: <span class="card-address"></span></p>
+                  <a href="#" class="btn btn-primary">Report Incident</a>
+              </div>
+          </div>
+      </template>
+  
+      <div id="savedStations-go-here"></div>
+
     <nav id="footerPlaceholder"></nav>
 
 
@@ -47,7 +64,7 @@
     <script src="scripts/firebaseAPI.js"></script>
     <script src="scripts/skeleton.js"></script>
     <script src="scripts/script.js"></script>
-    <script src="scripts/authentication.js"></script>
+    <script src="scripts/main.js"></script>
 
     <script>
         function filterOptions() {
