--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -78,7 +78,7 @@
   <a href="#">Account Details</a>
   <a href="#">Account Settings</a>
   <a href="#">Aurapoints</a>
-  <a href="/index.html">Logout</a>
+  <button class="btn btn-outline-light mt-3"onclick="logout()"><a href="../index.html">Logout</a></button>
   <button class="btn btn-outline-light mt-3" onclick="toggleDropupMenu()">Close</button>
 </div>
 
@@ -88,6 +88,7 @@
     menu.classList.toggle('active');
   }
 </script>
+<script src="/scripts/script.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
