--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
     </div>
 
 
-    <nav id="footerPlaceholder"></nav>
+    <nav id="navbarPlaceholder"></nav>
 
     <!-- JS funcs  -->
     <script src="scripts/firebaseAPI.js"></script>
