--- a/searchroutes.html
+++ b/searchroutes.html
@@ -54,7 +54,7 @@
 
       <div id="savedRoutes-go-here"></div>
 
-    <nav id="footerPlaceholder"></nav>
+    <nav id="navbarPlaceholder"></nav>
 
 
 
