--- a/searchstations.html
+++ b/searchstations.html
@@ -56,7 +56,7 @@
   
       <div id="savedStations-go-here"></div>
 
-    <nav id="footerPlaceholder"></nav>
+    <nav id="navbarPlaceholder"></nav>
 
 
 
