--- a/help.html
+++ b/help.html
@@ -2,31 +2,49 @@
 <html lang="en">
 
 <head>
-    <link rel = "stylesheet" href = "styles/styles.css">
+  <!-- <link rel="stylesheet" href="styles/styles.css"> -->
 
-        
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-    </script> 
+
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+    </script> -->
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+
+  <!-- Other libs -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-    <ul class="nav flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Emergency Contract Access</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">How to use Safety Indicators</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Incident Report Guideline</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">FAQ</a>
-        </li>
-      </ul>
+  <ul class="nav flex-column">
+    <li class="nav-item">
+      <a class="nav-link active" href="#">Emergency Contract Access</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">How to use Safety Indicators</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Incident Report Guideline</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">FAQ</a>
+    </li>
+  </ul>
+
+  <nav id="navbarPlaceholder"></nav>
+
+  <script src="scripts/firebaseAPI.js"></script>
+  <script src="scripts/skeleton.js"></script>
+  <script src="scripts/script.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
 
-    </html>
+</html>
