--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
 
 
 
-    <nav id="footerPlaceholder"></nav>
+    <nav id="navbarPlaceholder"></nav>
 
     <!-- JS funcs  -->
     <script src="scripts/firebaseAPI.js"></script>
