--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,30 +1,87 @@
 <!DOCTYPE html>
+
 <head>
   <title>Navbar After Login</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="/styles/styles.css" rel="stylesheet">
+
+  <style>
+    .dropup-menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.8);
+      color: white;
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      transition: opacity 0.3s ease;
+      opacity: 0;
+      z-index: 5;
+    }
+
+    .dropup-menu.active {
+      display: flex;
+      opacity: 1;
+    }
+
+    .dropup-menu a {
+      /* display: block; */
+      /* margin: 10px 0; */
+      color: white;
+      text-decoration: none;
+      /* font-size: 1.2rem; */
+    }
+
+    .navbar-nav {
+      height: auto;
+      width: 80%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .navbar-nav .nav-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .navbar-nav .nav-item a {
+      cursor: pointer;
+    }
+  </style>
 </head>
+
 <body>
 
-<nav class="nav_after_login navbar navbar-expand bg-primary fixed-bottom">
-  <div class="container-fluid d-flex justify-content-center">
-    <ul class="navbar-nav">
-      <li class="nav-item d-flex flex-column align-items-center">
-        <img src="./media/Icon-Placeholder.png" />
-        <a class="nav-link text-light" href="/aboutus.html"> About Us </a>
-      </li>
-      <li class="nav-item d-flex flex-column align-items-center">
-        <img src="./media/Icon-Placeholder.png" />
-        <a class="nav-link text-light" href="/index.html"> Home </a>
-      </li>
-      <li class="nav-item d-flex flex-column align-items-center">
-        <img src="./media/Icon-Placeholder.png" />
-        <a class="nav-link text-light" href="/help.html"> Help </a>
-      </li>
-    </ul>
-    
-    
+  <nav class="navbar navbar-expand bg-primary fixed-bottom">
+    <div class="container-fluid d-flex justify-content-center">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link text-light" href="/aboutus.html">
+            <img src="../media/person-raised-hand.svg" />
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" href="/index.html">
+            <img src="../media/house-door-fill.svg" />
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" href="/help.html">
+            <img src="../media/question-square-fill.svg" />
+          </a>
+        </li>
+      </ul>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    </div>
+  </nav>
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
