added back buttons to bookmarked, search stations, and search routes. Moved some internal css from nav_after to external css

--- a/searchroutes.html
+++ b/searchroutes.html
@@ -32,6 +32,12 @@
 <body>
     <nav id="navbarPlaceholder"></nav>
 
+    <div class="back-button-container">
+        <button onclick="goBack()" class="back-button">
+            ← Back
+        </button>
+    </div>
+    
     <h1 id="search-routes-h1">Search Your Route</h1>
 
     <div class="dropdown-container">
