--- a/searchstations.html
+++ b/searchstations.html
@@ -32,6 +32,12 @@
 <body>
     <nav id="navbarPlaceholder"></nav>
 
+    <div class="back-button-container">
+        <button onclick="goBack()" class="back-button">
+            ← Back
+        </button>
+    </div>
+
     <h1 id="search-stations-h1">Search Your Station</h1>
 
     <div class="dropdown-container">
