--- a/afterLogin/bookmark.html
+++ b/afterLogin/bookmark.html
@@ -34,6 +34,13 @@
         <h1 id="user-name2" class="display-4">Saved Stations/Routes for <span style = "text-align: center" id="name-goes-here"></span></h1>
     </div>
 
+    <div class="back-button-container">
+        <button onclick="goBack()" class="back-button">
+            ← Back
+        </button>
+    </div>
+    
+
     <h2 id="saved-stations-h2">Saved Stations</h2>
    
     <template id="savedStationsTemplate">
