bookmark button in searchstations.html

--- a/searchstations.html
+++ b/searchstations.html
@@ -55,6 +55,7 @@
                   <p>Location: <span class="card-text"></span></p>
                   <p>Busyness: <span class="card-busy"></span></p>
                   <p>Address: <span class="card-address"></span></p>
+                  <button class="btn btn-primary bookmark-btn">Bookmark</button>
                   <a href="#" class="btn btn-primary">Report Incident</a>
               </div>
           </div>
