--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <script src="scripts/firebaseAPI.js"></script>
     <script src="scripts/skeleton.js"></script>
     <script src="scripts/script.js"></script>
-    
+    <script src="scripts/main.js"></script>
     
 
 </body>
