--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -83,7 +83,7 @@
 
 
       <div class="values">
-        <img src="/public/media/busVector.jpg" alt="image"/>
+        <img src="/media/busVector.jpg" alt="image"/>
         <h1 class="h1InAbout">Our Values</h1>
         <div>
           <p>
@@ -99,7 +99,7 @@
 
 
       <div class="vision">
-        <img src="/public/media/skytrain.jpg" alt="image"/>
+        <img src="/media/skytrain.jpg" alt="image"/>
         <h1 class="h1InAbout">Our Vision for Transit Safety</h1>
         <div>
           <p>
@@ -113,7 +113,7 @@
 
 
       <div class="team">
-        <img src="/public/media/bcitBurnaby.jpeg" alt="image" />
+        <img src="/media/bcitBurnaby.jpeg" alt="image" />
         <h1 class="h1InAbout">Meet the Team</h1>
         <p>
           We are three dedicated Computer Systems Technology students with a
