fixed giant navbar after login, fixed back button in searchroutes. Can ignore the 3 files in the text folder for now, still have to look at reoargazing and relinking it the way it was before

--- a/searchroutes.html
+++ b/searchroutes.html
@@ -34,9 +34,11 @@
     <nav id="navbarPlaceholder"></nav>
 
     <div class="back-button-container">
-        <button onclick="goBack()" class="back-button">
+        <a href="main.html">
+        <button>
             ← Back
         </button>
+        </a>
     </div>
     
     <h1 id="search-routes-h1">Search Your Route</h1>
