added skeleton and main js back in -himmat

--- a/aboutus.html
+++ b/aboutus.html
@@ -58,6 +58,8 @@
       <button onclick="goBack()" class="back-button">← Back</button>
     </header>
 
+    <nav id="navbarPlaceholder"></nav>
+
     <div id="aboutUs">
       <div>
         <h1 class="h1InAbout">What is TransitAura?</h1>
@@ -135,9 +137,8 @@
 
     <nav id="navbarPlaceholder"></nav>
 
-    <script src="scripts/firebaseAPI.js"></script>
+    <!-- JS funcs  -->
+    <script src="scripts/login.js"></script>
     <script src="scripts/skeleton.js"></script>
-    <script src="scripts/script.js"></script>
-    <script src="scripts/main.js"></script>
   </body>
 </html>
