--- a/login.html
+++ b/login.html
@@ -20,12 +20,11 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
 
-     <!-- Ensure login.js loads after firebaseui.js -->
 
 </head>
 <body>
     <h1>Login</h1>
-    <div id="firebaseui-auth-container"></div> <!-- FirebaseUI renders here -->
+    <div id="firebaseui-auth-container"></div>
 
     <p>Don’t have an account? Sign up using the options above.</p>
 
