--- a/station.html
+++ b/station.html
@@ -28,8 +28,10 @@
     <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/login.js"></script>
   <script src="scripts/station.js"></script>
+  <script src="scripts/skeleton.js"></script>
 </head>
 <body>
+  <nav id="navbarPlaceholder"></nav>
   <h1 id="stationName">Station Name</h1>
   <p id="stationNeighborhood">Neighborhood: </p>
   <p id="stationDescription">Description: </p>
