--- a/bookmark.html
+++ b/bookmark.html
@@ -44,6 +44,7 @@
     <div class="back-button-container">
       <button onclick="goBack()" class="back-button">← Back</button>
     </div>
+    <nav id="navbarPlaceholder"></nav>
 
     <div id="book-mark-heading">
       <h1 id="user-name2" class="display-4">
@@ -87,9 +88,8 @@
     <nav id="navbarPlaceholder"></nav>
 
     <!-- JS funcs  -->
-    <script src="/scripts/firebaseAPI.js"></script>
-    <script src="../scripts/skeleton.js"></script>
-    <script src="/scripts/script.js"></script>
-    <script src="/scripts/main.js"></script>
+    <!-- JS funcs  -->
+    <script src="scripts/login.js"></script>
+    <script src="scripts/skeleton.js"></script>
   </body>
 </html>
