--- a/help.html
+++ b/help.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+  <nav id="navbarPlaceholder"></nav>
   <ul class="nav flex-column">
     <li class="nav-item">
       <a class="nav-link active" href="#">Emergency Contract Access</a>
@@ -32,7 +33,9 @@
       <a class="nav-link" href="#">FAQ</a>
     </li>
   </ul>
-
+    <!-- JS funcs  -->
+    <script src="scripts/login.js"></script>
+    <script src="scripts/skeleton.js"></script>
 </body>
 
 </html>
