--- a/main.html
+++ b/main.html
@@ -35,28 +35,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand bg-primary fixed-bottom">
-        <div class="container-fluid d-flex justify-content-center">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link text-light" href="/afterLogin/bookmark.html">
-                <img id="bookmark-icon" src="media/bookmark.png" alt="Bookmarked Icon" />
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light" href="/main.html">
-                <img id="home-icon" src="media/house-door-fill.svg" alt="Home Icon" />
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light" href="#" onclick="toggleDropupMenu()">
-                <img id="profile-icon" src="media/account.png" alt="Sorry no image" />
-              </a>
-            </li>
-          </ul>
-    
-        </div>
-      </nav>
+  <nav id="navbarPlaceholder"></nav>
     
       <div class="dropup-menu" id="profileDropupMenu">
         <a href="#">Account Details</a>
@@ -101,6 +80,7 @@
 
     <!-- JS funcs  -->
     <script src="scripts/login.js"></script>
+    <script src="scripts/skeleton.js"></script>
 
 </body>
 
