--- a/searchroutes.html
+++ b/searchroutes.html
@@ -68,10 +68,9 @@
 
 
     <!-- JS funcs  -->
-    <script src="scripts/firebaseAPI.js"></script>
+    <!-- JS funcs  -->
+    <script src="scripts/login.js"></script>
     <script src="scripts/skeleton.js"></script>
-    <script src="scripts/script.js"></script>
-    <script src="/scripts/main.js"></script>
 
     <script>
         function filterOptions() {
