added color bar -himmat

--- a/login.html
+++ b/login.html
@@ -23,12 +23,13 @@
 
 </head>
 <body>
-    <h1>Login</h1>
+    <h1 id="loginheader">Login to TransitAura</h1>
     <div id="firebaseui-auth-container"></div>
 
-    <p>Don’t have an account? Sign up using the options above.</p>
+    <p id="donthaveaccount">Don’t have an account? Sign up using the options above.</p>
 
-    <script src="scripts/login.js" defer></script> <!-- Load login functionality -->
+    <script src="scripts/firebaseConfig.js"></script>
+    <script src="scripts/login.js" defer></script>
 
 </body>
 </html>
