--- a/aboutus.html
+++ b/aboutus.html
@@ -138,6 +138,7 @@
     <nav id="navbarPlaceholder"></nav>
 
     <!-- JS funcs  -->
+    <script src="scripts/firebaseConfig.js"></script>
     <script src="scripts/login.js"></script>
     <script src="scripts/skeleton.js"></script>
   </body>
