--- a/help.html
+++ b/help.html
@@ -34,6 +34,7 @@
     </li>
   </ul>
     <!-- JS funcs  -->
+    <script src="scripts/firebaseConfig.js"></script>
     <script src="scripts/login.js"></script>
     <script src="scripts/skeleton.js"></script>
 </body>
