--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
     <nav id="navbarPlaceholder"></nav>
 
+    <script src="scripts/firebaseConfig.js"></script>
     <script src="scripts/login.js"></script>
     <script src="scripts/skeleton.js"></script>
 
