--- a/searchroutes.html
+++ b/searchroutes.html
@@ -69,6 +69,7 @@
 
     <!-- JS funcs  -->
     <!-- JS funcs  -->
+    <script src="scripts/firebaseConfig.js"></script>
     <script src="scripts/login.js"></script>
     <script src="scripts/skeleton.js"></script>
 
