--- a/searchstations.html
+++ b/searchstations.html
@@ -105,9 +105,10 @@
     <nav id="navbarPlaceholder"></nav>
 
         <!-- JS funcs  -->
+        <script src="scripts/firebaseConfig.js"></script>
         <script src="scripts/login.js"></script>
         <script src="scripts/skeleton.js"></script>
-
+        <script src="scripts/station.js"></script>
 
 
 
