added color safety bar, fixed haydens main js issue -himmat

--- a/main.html
+++ b/main.html
@@ -79,6 +79,7 @@
     <script src="scripts/skeleton.js"></script>
     <script src="scripts/station.js"></script>
     <script src="scripts/recentlyviewed.js"></script>
+    <script src="scripts/main.js"></script>
     <script>
       firebase.auth().onAuthStateChanged((user) => {
           if (user) {
