--- a/searchstations.html
+++ b/searchstations.html
@@ -109,6 +109,7 @@
         <script src="scripts/login.js"></script>
         <script src="scripts/skeleton.js"></script>
         <script src="scripts/station.js"></script>
+        <script src="scripts/main.js"></script>
 
 
 
