--- a/searchroutes.html
+++ b/searchroutes.html
@@ -72,6 +72,7 @@
     <script src="scripts/firebaseConfig.js"></script>
     <script src="scripts/login.js"></script>
     <script src="scripts/skeleton.js"></script>
+    <script src="scripts/main.js"></script>
 
     <script>
         function filterOptions() {
